--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
       
       <hr>
-    <h2> Miscellaneous Links </h2>
+    <h2> Miscellaneous Links (to stuff that's cool that I did not make)</h2>
       <a href="http://snapbubbles.com/"> Bubblewrap Simulator </a> <br />
       <a href="http://www.staggeringbeauty.com/"> EPILEPSY WARNING!!!!!!! </a> <br />
       <a href="http://cat-bounce.com/"> Cat Bounce! </a> <br />
