--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
    </style>
   </head>
   <body>
-    <h1> Hmmm I'm just testing things here... </h1> 
+    <h1> Hi I'm Aaron! </h1> 
       <hr>
     <p> Testing testing 123... </p>
       <hr>
-    <h2> Hmmm I wonder if this works... </h2>
+    <h2> This whole page is a WIP and a lot of the code is copypasted from an old high school website ^-^" </h2>
       <p> Been a while since I fiddled with html... </p>
       <hr>
     <h2> Waiting for something to happen? </h2>
